--- a/style.css
+++ b/style.css
@@ -1,96 +1,62 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  /* border: 1px solid red; */
+  font-family: 'Rubik';
+}
+
+html,body{
+  /* width: 100vw; */
+  /* height: 100vh; */
+}
+
+header nav{
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 20px 0 20px 30px;
+  gap: 20px;
+  /* border-bottom: 1px solid black; */
+  /* box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2); Sombra arriba*/
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+header nav li{
+  padding: 10px 15px 10px 15px;
+  /* text-decoration: none; */
+  list-style: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: #FF204E;
+  border-radius: 5px;
+  color: white;
+  letter-spacing: 0.2rem;
+  font-weight: 500;
+  transition: all .2s ease;
+  text-transform: uppercase;
+  /* background-color: red; */
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+header nav li:hover{
+  background-color: #A0153E;
+}
+
+main{
+  padding: 10px 50px 10px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* body table tr{
+  border: 1px solid red;
+}
+
+body table tr{
+  display: flex;
+  padding: 5px;
+  gap: 5px;
+} */
+
+body table td,th{
+  /* display: flex; */
+  /* text-align: center; */
 }
