--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
 
 html,body{
   /* width: 100vw; */
-  /* height: 100vh; */
+  height: 100vh;
+}
+
+body{
+  position: relative;
 }
 
 header nav{
@@ -56,7 +60,32 @@ body table tr{
   gap: 5px;
 } */
 
-body table td,th{
+body table th{
   /* display: flex; */
   /* text-align: center; */
+}
+
+
+body .divGrafo{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+body .divGrafo .grafo{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+}
+
+body canvas{
+  border: 10px;
 }
