--- a/style.css
+++ b/style.css
@@ -17,11 +17,21 @@ body{
 
 header nav{
   display: flex;
-  padding: 20px 0 20px 30px;
+  justify-content: space-between;
+  height: auto;
+  align-items: center;
+  padding-right: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+header nav ul{
+  display: flex;
+  margin: 0;
+  padding: 25px 0 25px 30px;
   gap: 20px;
   /* border-bottom: 1px solid black; */
   /* box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2); Sombra arriba*/
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  
 }
 
 header nav li{
@@ -88,4 +98,39 @@ body .divGrafo .grafo{
 
 body canvas{
   border: 10px;
+}
+
+
+header .btnShowGrafo{
+  padding: 25px;
+  /* border: 1px solid black; */
+  border-radius: 50px;
+  font-size: 25px;
+  cursor: pointer;
+  transition: all .1s ease;
+}
+
+header .btnShowGrafo:hover{
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+
+.grafo{
+  position: relative;
+}
+
+.grafo i{
+  position: absolute;
+  font-size: 40px;
+  top: 0;
+  right: 0;
+  padding: 20px;
+  /* background-color: red; */
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  filter: drop-shadow(inset 0 0 5px rgba(0, 0, 0, 0.5));
+  transform: all .2s ease;
+}
+
+.grafo i:active{
+  transform: scale(0.98);
 }
