--- a/style.css
+++ b/style.css
@@ -134,3 +134,26 @@ header .btnShowGrafo:hover{
 .grafo i:active{
   transform: scale(0.98);
 }
+/* Estilo para el botón flotante de play */
+.btnPlay {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: green;
+  color: white;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.btnPlay:hover {
+  background-color: darkgreen;
+}
+
+
